--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
