--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
     "vue": "^2.6.10",
+    "vue-luck-draw": "^3.4.5",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
